--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@ body {
 
 .main_container {
   padding-top: 64px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
 
 .btn-large {
@@ -28,6 +31,17 @@ nav ul a {
   position: fixed;
 }
 
+.nav-wrapper{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 80px;
+}
+
+.nav-links{
+  display: flex;
+  gap: 20px;
+}
+
 .divider {
     border-top: 0px solid #ccc;
     margin: 0; 
@@ -45,4 +59,102 @@ nav ul a {
     @media (max-width: 850px){
         padding: 0 10px;
     }
+}
+
+.stories__container__storyimage{
+  margin-top: -1.4px;
+}
+
+
+.gallery , .features, .write_to_us{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+}
+
+.gallery .card-panel {
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.gallery .card-panel:hover .overlay {
+  opacity: 1;
+}
+
+.overlay span {
+  color: white;
+  text-align: center;
+}
+
+.row .col {
+  padding: 0;
+}
+
+.card-panel{
+  padding: 0;
+}
+
+.gallery__card__content{
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 599px) {
+  .gallery .col.s12.m3:not(:first-child) {
+      display: none;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 849px) {
+  .gallery .col.s12.m3:nth-child(n+3) {
+      display: none;
+  }
+}
+
+@media screen and (min-width: 850px) {
+  .gallery .col.s12.m3 {
+      display: block;
+  }
+}
+
+
+.write_to_us_form{
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.footer__content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin: 30px 0;
+}
+
+.footer__links{
+  display: flex;
+  gap: 10px;
 }
