--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,7 @@ nav ul a {
 @media screen and (min-width: 850px) {
   .gallery__card {
     display: flex;
-    width: 25vw;
+    width: 25%;
   }
 }
 
